--- a/Gamoitsani/Source/Modules/Game/Game/Views/GameInfo/GameInfoView.xib
+++ b/Gamoitsani/Source/Modules/Game/Game/Views/GameInfo/GameInfoView.xib
@@ -13,7 +13,7 @@
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="X2f-M8-weE" customClass="GameInfoView" customModule="Gamoitsani" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="310" height="400"/>
-            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VdE-ix-K0J" customClass="GMButton" customModule="Gamoitsani" customModuleProvider="target">
                     <rect key="frame" x="24" y="326" width="262" height="38"/>
